3rdparty/jasper-version-4.2.0/data/test/bad/345-1.pnm
P22 44222222222222222222222222222222222222                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          222222222222222222222222222422